pcem_private_api += files(
        '../../includes/private/cpu/cpu.h',
        '../../includes/private/cpu/386_common.h',
        '../../includes/private/cpu/386_ops.h',
        '../../includes/private/cpu/8087.h',
        '../../includes/private/cpu/x86_flags.h',
        '../../includes/private/cpu/x86.h',
        '../../includes/private/cpu/x86_ops_3dnow.h',
        '../../includes/private/cpu/x86_ops_arith.h',
        '../../includes/private/cpu/x86_ops_atomic.h',
        '../../includes/private/cpu/x86_ops_bcd.h',
        '../../includes/private/cpu/x86_ops_bit.h',
        '../../includes/private/cpu/x86_ops_bitscan.h',
        '../../includes/private/cpu/x86_ops_call.h',
        '../../includes/private/cpu/x86_ops_cyrix.h',
        '../../includes/private/cpu/x86_ops_flag.h',
        '../../includes/private/cpu/x86_ops_fpu.h',
        '../../includes/private/cpu/x86_ops.h',
        '../../includes/private/cpu/x86_ops_inc_dec.h',
        '../../includes/private/cpu/x86_ops_int.h',
        '../../includes/private/cpu/x86_ops_io.h',
        '../../includes/private/cpu/x86_ops_jump.h',
        '../../includes/private/cpu/x86_ops_misc.h',
        '../../includes/private/cpu/x86_ops_mmx_arith.h',
        '../../includes/private/cpu/x86_ops_mmx_cmp.h',
        '../../includes/private/cpu/x86_ops_mmx.h',
        '../../includes/private/cpu/x86_ops_mmx_logic.h',
        '../../includes/private/cpu/x86_ops_mmx_mov.h',
        '../../includes/private/cpu/x86_ops_mmx_pack.h',
        '../../includes/private/cpu/x86_ops_mmx_shift.h',
        '../../includes/private/cpu/x86_ops_mov_ctrl.h',
        '../../includes/private/cpu/x86_ops_mov.h',
        '../../includes/private/cpu/x86_ops_mov_seg.h',
        '../../includes/private/cpu/x86_ops_movx.h',
        '../../includes/private/cpu/x86_ops_msr.h',
        '../../includes/private/cpu/x86_ops_mul.h',
        '../../includes/private/cpu/x86_ops_pmode.h',
        '../../includes/private/cpu/x86_ops_prefix.h',
        '../../includes/private/cpu/x86_ops_rep.h',
        '../../includes/private/cpu/x86_ops_ret.h',
        '../../includes/private/cpu/x86_ops_set.h',
        '../../includes/private/cpu/x86_ops_shift.h',
        '../../includes/private/cpu/x86_ops_stack.h',
        '../../includes/private/cpu/x86_ops_string.h',
        '../../includes/private/cpu/x86_ops_xchg.h',
        '../../includes/private/cpu/x87.h',
        '../../includes/private/cpu/x87_ops_arith.h',
        '../../includes/private/cpu/x87_ops.h',
        '../../includes/private/cpu/x87_ops_loadstore.h',
        '../../includes/private/cpu/x87_ops_misc.h',
        '../../includes/private/cpu/x87_timings.h',
        )

pcem_src += files(
        '386.c',
        '386_common.c',
        '386_dynarec.c',
        '386_dynarec_ops.c',
        '808x.c',
        'cpu.c',
        'cpu_tables.c',
        'x86seg.c',
        'x87.c',
        'x87_timings.c'
        )