pcem_private_api += files(
        '../../includes/private/devices/cassette.h',
        '../../includes/private/devices/esdi_at.h',
        '../../includes/private/devices/f82c710_upc.h',
        '../../includes/private/devices/nvr.h',
        '../../includes/private/devices/nvr_tc8521.h',
        '../../includes/private/devices/ps2_nvr.h',
        '../../includes/private/devices/sis496.h'
        )

pcem_src += files(
        'cassette.c',
        'esdi_at.c',
        'f82c710_upc.c',
        'nvr.c',
        'ps2_nvr.c',
        'sis496.c'
        )