pcem_private_api += files(
        '../../includes/private/disc/disc_fdi.h',
        '../../includes/private/disc/disc.h',
        '../../includes/private/disc/disc_img.h',
        '../../includes/private/disc/disc_sector.h'
        )

pcem_src += files(
        'disc.c',
        'disc_fdi.c',
        'disc_img.c',
        'disc_sector.c'
        )